; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tools/tests/MPMMTest/extr_MPMMtest.c_wait_for_servers.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tools/tests/MPMMTest/extr_MPMMtest.c_wait_for_servers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [28 x i8] c"task_get_bootstrap_port(): \00", align 1
@num_servers = common dso_local global i32 0, align 4
@server_port_name = common dso_local global i32* null, align 8
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"Server(s) failed to register\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @wait_for_servers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wait_for_servers() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 10, i32* %2, align 4
  %6 = call i32 (...) @mach_task_self()
  %7 = call i64 @task_get_bootstrap_port(i32 %6, i32* %3)
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* @KERN_SUCCESS, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %0
  %12 = load i64, i64* %5, align 8
  %13 = call i32 @mach_error(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i64 %12)
  %14 = call i32 @exit(i32 1) #3
  unreachable

15:                                               ; preds = %0
  br label %16

16:                                               ; preds = %46, %15
  %17 = load i32, i32* %2, align 4
  %18 = add nsw i32 %17, -1
  store i32 %18, i32* %2, align 4
  %19 = icmp sgt i32 %17, 0
  br i1 %19, label %20, label %48

20:                                               ; preds = %16
  store i32 0, i32* %1, align 4
  br label %21

21:                                               ; preds = %38, %20
  %22 = load i32, i32* %1, align 4
  %23 = load i32, i32* @num_servers, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %41

25:                                               ; preds = %21
  %26 = load i32, i32* %3, align 4
  %27 = load i32*, i32** @server_port_name, align 8
  %28 = load i32, i32* %1, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = call i64 @bootstrap_look_up(i32 %26, i32 %31, i32* %4)
  store i64 %32, i64* %5, align 8
  %33 = load i64, i64* %5, align 8
  %34 = load i64, i64* @KERN_SUCCESS, align 8
  %35 = icmp ne i64 %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %25
  br label %41

37:                                               ; preds = %25
  br label %38

38:                                               ; preds = %37
  %39 = load i32, i32* %1, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %1, align 4
  br label %21

41:                                               ; preds = %36, %21
  %42 = load i64, i64* %5, align 8
  %43 = load i64, i64* @KERN_SUCCESS, align 8
  %44 = icmp eq i64 %42, %43
  br i1 %44, label %45, label %46

45:                                               ; preds = %41
  ret void

46:                                               ; preds = %41
  %47 = call i32 @usleep(i32 100000)
  br label %16

48:                                               ; preds = %16
  %49 = load i32, i32* @stderr, align 4
  %50 = call i32 @fprintf(i32 %49, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  %51 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i64 @task_get_bootstrap_port(i32, i32*) #1

declare dso_local i32 @mach_task_self(...) #1

declare dso_local i32 @mach_error(i8*, i64) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @bootstrap_look_up(i32, i32, i32*) #1

declare dso_local i32 @usleep(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
